added instructions